tests/ui/dropck/drop-with-active-borrows-2.stderr
error[E0515]: cannot return value referencing local variable `raw_lines`
  --> $DIR/drop-with-active-borrows-2.rs:3:5
   |
LL |     raw_lines.iter().map(|l| l.trim()).collect()
   |     ---------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     returns a value referencing data owned by the current function
   |     `raw_lines` is borrowed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0515`.
